--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -15,23 +15,21 @@
       --brand:#5dd6c6;
       --brand2:#7aa7ff;
       --stroke:rgba(255,255,255,.12);
-      --shadow: 0 18px 60px rgba(0,0,0,.45);
-      --radius: 18px;
-      --radius2: 26px;
-      --max: 1100px;
+      --shadow:0 18px 60px rgba(0,0,0,.45);
+      --radius:18px;
+      --radius2:26px;
+      --max:1100px;
     }
 
     *{ box-sizing:border-box; }
     html,body{ height:100%; }
     body{
       margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
+      font-family:ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
       color:var(--text);
-      background:
-        radial-gradient(1200px 900px at 15% -10%, rgba(122,167,255,.28), transparent 55%),
+      background:radial-gradient(1200px 900px at 15% -10%, rgba(122,167,255,.28), transparent 55%),
         radial-gradient(900px 700px at 90% 20%, rgba(93,214,198,.22), transparent 55%),
-        linear-gradient(180deg, #070b14, var(--bg));
-      line-height:1.5;
+        linear-gradient(180deg, #070b14, var(--bg));line-height:1.5;
     }
 
     a{ color:inherit; text-decoration:none; }
