--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,7 +40,7 @@
       position:sticky;
       top:0;
       z-index:50;
-      background: linear-gradient(180deg, rgba(11,18,32,.92), rgba(11,18,32,.65));
+      background:linear-gradient(180deg, rgba(11,18,32,.92), rgba(11,18,32,.65));
       backdrop-filter: blur(12px);
       border-bottom:1px solid var(--stroke);
     }
@@ -61,9 +61,7 @@
     .logo{
       width:40px;height:40px;
       border-radius:14px;
-      background:
-        radial-gradient(14px 14px at 30% 30%, rgba(255,255,255,.9), rgba(255,255,255,.1) 60%),
-        linear-gradient(135deg, rgba(93,214,198,1), rgba(122,167,255,1));
+      background:radial-gradient(14px 14px at 30% 30%, rgba(255,255,255,.9), rgba(255,255,255,.1) 60%),linear-gradient(135deg, rgba(93,214,198,1), rgba(122,167,255,1));
       box-shadow: 0 10px 30px rgba(0,0,0,.35);
       border:1px solid rgba(255,255,255,.22);
     }
@@ -116,11 +114,11 @@
       align-items:stretch;
     }
     .hero-card{
-      background: linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.03));
-      border: 1px solid var(--stroke);
-      border-radius: var(--radius2);
-      box-shadow: var(--shadow);
-      padding: 28px;
+      background:linear-gradient(180deg, rgba(255,255,255,.05), rgba(255,255,255,.03));
+      border:1px solid var(--stroke);
+      border-radius:var(--radius2);
+      box-shadow:var(--shadow);
+      padding:28px;
       overflow:hidden;
       position:relative;
     }
@@ -140,7 +138,7 @@
     .sub{
       color: var(--muted);
       font-size: 16px;
-      margin: 0 0 18px;
+      margin:0 0 18px;
       max-width: 56ch;
     }
 
